# opengl-mandelbrot

./: CMakeLists.txt  CMakeSettings.json  README.md
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: gl.h
lib/stb/: CMakeLists.txt
shaders/: CMakeLists.txt  basic.vert  mandelbrot.frag
src/: CMakeLists.txt  buffer.h  buffer.inl  main.cpp  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
textures/: CMakeLists.txt
